# rBridge

./: .gitignore  README.md  pyproject.toml  requirements.txt
rbridge/: __init__.py  __main__.py  eval.py  mask.py  metrics.py
tex/: iclr2025_conference.bib  iclr2025_conference.tex  macros.tex
tex/sections/: 0_abstract.tex  1_intro.tex  2_problem.tex  3_method.tex  4_results.tex  5_discussion.tex  7_appendix.tex
